# ugit

./: .gitignore  README.md  pyproject.toml
src/ugit/: cli.py  config.py  data.py
