[project]
name = "ugit"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Fortuny",email = "92552031+gabrielfortuny@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ugit", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
