[project]
name = "ugit"
version = "0.1.0"
description = ""
authors = [
    { name = "Gabriel Fortuny", email = "92552031+gabrielfortuny@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["click (>=8.2.0,<9.0.0)"]

[project.scripts]
ugit = "ugit.cli:cli"

[tool.poetry]
packages = [{ include = "ugit", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.9"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
src = ["src"]
select = ["E", "F", "I", "B"] # pycodestyle, pyflakes, isort, bugbear
ignore = ["E501"]             # Ignore line length (Black handles this)

[tool.mypy]
strict = true
exclude = 'tests/|build/'
mypy_path = "src"
